fix bg colors of rows in legend in dark mode

--- a/app/static/css/nord.fermentrack.css
+++ b/app/static/css/nord.fermentrack.css
@@ -166,6 +166,10 @@ a:hover, a:focus {
     border-top: 1px solid #ddd;
 }
 
+.table-striped>tbody>tr:nth-of-type(odd) {
+    background-color: var(--bgcolor);
+}
+
 .form-control, .select2-search input[type=text] {
     border: 2px solid var(--bordercolor);
 }
